--- a/Forte/GlossaryItemBriefTableViewCell.xib
+++ b/Forte/GlossaryItemBriefTableViewCell.xib
@@ -15,18 +15,18 @@
                 <rect key="frame" x="0.0" y="0.0" width="313" height="79"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Term" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PeJ-pm-g4j">
-                        <rect key="frame" x="16" y="8" width="281" height="63"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="752" text="Term" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PeJ-pm-g4j">
+                        <rect key="frame" x="18" y="10" width="277" height="59"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="PeJ-pm-g4j" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="6Bk-PW-G77"/>
-                    <constraint firstItem="PeJ-pm-g4j" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="9vu-Ib-bid"/>
-                    <constraint firstItem="PeJ-pm-g4j" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="-8" id="TBX-Op-R1j"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="PeJ-pm-g4j" secondAttribute="bottom" id="rRd-Lm-3p2"/>
+                    <constraint firstItem="PeJ-pm-g4j" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="9vu-Ib-bid"/>
+                    <constraint firstItem="PeJ-pm-g4j" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="A8N-M9-wHw"/>
+                    <constraint firstItem="PeJ-pm-g4j" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="-10" id="TBX-Op-R1j"/>
+                    <constraint firstAttribute="bottom" secondItem="PeJ-pm-g4j" secondAttribute="bottom" constant="10" id="uj3-R5-AH5"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
