--- a/Forte/GlossaryItemDetailedTableViewCell.xib
+++ b/Forte/GlossaryItemDetailedTableViewCell.xib
@@ -6,7 +6,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchViewController" customModule="Forte"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GlossaryItemDetailedTableViewCell" rowHeight="184" id="KGk-i7-Jjw" customClass="GlossaryItemDetailedTableViewCell" customModule="Forte" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="184"/>
@@ -15,35 +15,26 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="183"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YuG-Kz-Dnd">
+                        <rect key="frame" x="23" y="49" width="279" height="116"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Detailed Cell" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNX-HL-vRg">
-                        <rect key="frame" x="16" y="16" width="288" height="21"/>
+                        <rect key="frame" x="18" y="18" width="284" height="21"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YuG-Kz-Dnd">
-                        <rect key="frame" x="20" y="45" width="284" height="46"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Cc-AT-1Vu">
-                        <rect key="frame" x="145" y="131" width="30" height="30"/>
-                        <state key="normal" title="Tag"/>
-                        <connections>
-                            <action selector="tag:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="jlT-4m-Ua4"/>
-                        </connections>
-                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="YuG-Kz-Dnd" firstAttribute="top" secondItem="CNX-HL-vRg" secondAttribute="bottom" constant="8" id="2Jp-1A-9wJ"/>
-                    <constraint firstItem="CNX-HL-vRg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="4Ep-Me-QK6"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="CNX-HL-vRg" secondAttribute="trailing" constant="8" id="DUj-Va-ADm"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="5Cc-AT-1Vu" secondAttribute="bottom" constant="14" id="HQY-6N-brB"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="YuG-Kz-Dnd" secondAttribute="trailing" constant="8" id="Kp7-BG-3jn"/>
-                    <constraint firstItem="YuG-Kz-Dnd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="NP0-i6-19j"/>
-                    <constraint firstItem="5Cc-AT-1Vu" firstAttribute="top" secondItem="YuG-Kz-Dnd" secondAttribute="bottom" constant="40" id="gtS-If-TvN"/>
-                    <constraint firstItem="CNX-HL-vRg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="tBq-ey-KNX"/>
-                    <constraint firstItem="5Cc-AT-1Vu" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="xB6-h5-GcL"/>
+                    <constraint firstItem="YuG-Kz-Dnd" firstAttribute="top" secondItem="CNX-HL-vRg" secondAttribute="bottom" constant="10" id="2Jp-1A-9wJ"/>
+                    <constraint firstItem="CNX-HL-vRg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="4Ep-Me-QK6"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="CNX-HL-vRg" secondAttribute="trailing" constant="10" id="DUj-Va-ADm"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="YuG-Kz-Dnd" secondAttribute="trailing" constant="10" id="Kp7-BG-3jn"/>
+                    <constraint firstItem="YuG-Kz-Dnd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="15" id="NP0-i6-19j"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="YuG-Kz-Dnd" secondAttribute="bottom" constant="10" id="X5o-bh-e0g"/>
+                    <constraint firstItem="CNX-HL-vRg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="tBq-ey-KNX"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
