--- a/Forte/GlossaryItemDetailedTableViewCell.xib
+++ b/Forte/GlossaryItemDetailedTableViewCell.xib
@@ -8,40 +8,57 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchViewController" customModule="Forte"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GlossaryItemDetailedTableViewCell" rowHeight="184" id="KGk-i7-Jjw" customClass="GlossaryItemDetailedTableViewCell" customModule="Forte" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="184"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GlossaryItemDetailedTableViewCell" rowHeight="267" id="KGk-i7-Jjw" customClass="GlossaryItemDetailedTableViewCell" customModule="Forte" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="267"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="183.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="266"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YuG-Kz-Dnd">
-                        <rect key="frame" x="23" y="49" width="279" height="116"/>
+                        <rect key="frame" x="23" y="49" width="279" height="137"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Detailed Cell" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNX-HL-vRg">
                         <rect key="frame" x="18" y="18" width="284" height="21"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pcZ-up-aT2">
+                        <rect key="frame" x="140" y="211" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="4Ng-ys-blF"/>
+                            <constraint firstAttribute="height" constant="40" id="mzr-21-FWQ"/>
+                        </constraints>
+                        <state key="normal" title="Button" image="greyStar"/>
+                        <connections>
+                            <action selector="starIcon:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Z0b-XP-EN7"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="YuG-Kz-Dnd" firstAttribute="top" secondItem="CNX-HL-vRg" secondAttribute="bottom" constant="10" id="2Jp-1A-9wJ"/>
                     <constraint firstItem="CNX-HL-vRg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="4Ep-Me-QK6"/>
                     <constraint firstAttribute="trailingMargin" secondItem="CNX-HL-vRg" secondAttribute="trailing" constant="10" id="DUj-Va-ADm"/>
+                    <constraint firstItem="pcZ-up-aT2" firstAttribute="top" secondItem="YuG-Kz-Dnd" secondAttribute="bottom" constant="25" id="Dm6-bI-VdR"/>
                     <constraint firstAttribute="trailingMargin" secondItem="YuG-Kz-Dnd" secondAttribute="trailing" constant="10" id="Kp7-BG-3jn"/>
                     <constraint firstItem="YuG-Kz-Dnd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="15" id="NP0-i6-19j"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="YuG-Kz-Dnd" secondAttribute="bottom" constant="10" id="X5o-bh-e0g"/>
+                    <constraint firstAttribute="bottom" secondItem="pcZ-up-aT2" secondAttribute="bottom" constant="15" id="klV-lU-PES"/>
+                    <constraint firstItem="pcZ-up-aT2" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="mN2-mK-hew"/>
                     <constraint firstItem="CNX-HL-vRg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="tBq-ey-KNX"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="meaningLabel" destination="YuG-Kz-Dnd" id="iFx-q8-9ft"/>
+                <outlet property="starIconOutlet" destination="pcZ-up-aT2" id="RAl-4u-buJ"/>
                 <outlet property="termLabel" destination="CNX-HL-vRg" id="OCs-f7-hmK"/>
             </connections>
-            <point key="canvasLocation" x="441" y="460"/>
+            <point key="canvasLocation" x="439" y="528.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="greyStar" width="350" height="350"/>
+    </resources>
 </document>
