--- a/Forte/Base.lproj/Main.storyboard
+++ b/Forte/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Tab Bar Controller-->
@@ -72,55 +73,6 @@
             </objects>
             <point key="canvasLocation" x="517" y="278"/>
         </scene>
-        <!--Root View Controller-->
-        <scene sceneID="KAH-MY-wtk">
-            <objects>
-                <tableViewController id="yvZ-tc-o08" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="lyI-zg-dRn">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <sections>
-                            <tableViewSection id="zNF-Cj-gWX">
-                                <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="a83-TM-7Wt">
-                                        <rect key="frame" x="0.0" y="64" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a83-TM-7Wt" id="DOK-gd-REa">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="8AL-DK-1KF">
-                                        <rect key="frame" x="0.0" y="108" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8AL-DK-1KF" id="6eq-t1-Oci">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="t1I-JW-3XV">
-                                        <rect key="frame" x="0.0" y="152" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="t1I-JW-3XV" id="75a-yB-qUP">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                        </sections>
-                        <connections>
-                            <outlet property="dataSource" destination="yvZ-tc-o08" id="eTR-xK-yqg"/>
-                            <outlet property="delegate" destination="yvZ-tc-o08" id="piH-g6-ooI"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="xBg-QQ-IRz"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZOz-Gl-jYG" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1237" y="978"/>
-        </scene>
         <!--Item-->
         <scene sceneID="DOI-7E-ewa">
             <objects>
@@ -131,12 +83,67 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="yvZ-tc-o08" kind="relationship" relationship="rootViewController" id="pFY-2I-IIN"/>
+                        <segue destination="KfN-J3-i1n" kind="relationship" relationship="rootViewController" id="o4j-6L-yzj"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Bv-Nm-cgP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="517" y="978"/>
+        </scene>
+        <!--Favorites-->
+        <scene sceneID="SSX-Xb-Qt1">
+            <objects>
+                <tableViewController id="KfN-J3-i1n" customClass="MarkedItemTableViewController" customModule="Forte" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="VrI-zZ-YNT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MarkedItemCell" rowHeight="80" id="8Sj-Ta-Lpo" customClass="MarkedItemTableViewCell" customModule="Forte" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="600" height="80"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8Sj-Ta-Lpo" id="M3Y-bn-uTS">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Term" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9wo-yk-hz2">
+                                            <rect key="frame" x="18" y="8" width="564" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meaning" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jRx-Ae-krS">
+                                            <rect key="frame" x="25" y="36" width="557" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="9wo-yk-hz2" firstAttribute="top" secondItem="M3Y-bn-uTS" secondAttribute="topMargin" id="4bz-w5-una"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="jRx-Ae-krS" secondAttribute="trailing" constant="10" id="PM6-ka-run"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="9wo-yk-hz2" secondAttribute="trailing" constant="10" id="j87-RX-fok"/>
+                                        <constraint firstItem="9wo-yk-hz2" firstAttribute="leading" secondItem="M3Y-bn-uTS" secondAttribute="leadingMargin" constant="10" id="m7r-Bf-SLr"/>
+                                        <constraint firstItem="jRx-Ae-krS" firstAttribute="top" secondItem="9wo-yk-hz2" secondAttribute="bottom" constant="7" id="p6I-lx-imx"/>
+                                        <constraint firstItem="jRx-Ae-krS" firstAttribute="leading" secondItem="M3Y-bn-uTS" secondAttribute="leadingMargin" constant="17" id="qu6-lB-5s6"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="markedMeaningLabel" destination="jRx-Ae-krS" id="fhy-ne-RFB"/>
+                                    <outlet property="markedTermLabel" destination="9wo-yk-hz2" id="vJd-bU-HMQ"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="KfN-J3-i1n" id="Dfa-SG-EcR"/>
+                            <outlet property="delegate" destination="KfN-J3-i1n" id="Lbk-1s-lr2"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Favorites" id="JE9-xd-M1D"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MKR-Md-ItL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1186" y="983"/>
         </scene>
     </scenes>
 </document>
